--- a/src/client/src/lesson/views/add/add.html
+++ b/src/client/src/lesson/views/add/add.html
@@ -51,7 +51,7 @@
         </tags-input>
       </td>
       <td>
-        <a href="#/help"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
+        <a ng-click="add.help('create_lesson')"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
       </td>
     </tr>
     </tbody>
@@ -95,7 +95,7 @@
       <button ng-click="deleteExercise($index)">Del</button>
     </td>
     <td>
-      <a href="/help"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
+      <a ng-click="add.exerciseHelp(exercise.type)"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
     </td>
   </tr>
   </tbody>
