Added Help module with modal_help  & exercise_help views

--- a/src/client/src/help/views/exercise_help/exercise_help.html
+++ b/src/client/src/help/views/exercise_help/exercise_help.html
@@ -5,7 +5,7 @@
   Add the exercise here with an example.
   consider loading the exercise and explanation
   from database - so you have help for each language
-
+{{exerciseHelp}}
 
 </div>
 <div class="modal-footer">
