--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -111,6 +111,7 @@
 <!-- App Code and controllers -->
 <script src="/static/src/auth/auth_module.js"></script>
 <script src="/static/src/language/language_module.js"></script>
+<script src="/static/src/help/help_module.js"></script>
 <script src="/static/src/lesson/lesson_module.js"></script>
 <script src="/static/src/practice/practice_module.js"></script>
 <script src="/static/src/profile/profile_module.js"></script>
@@ -153,6 +154,10 @@
   });
 </script>
 
+
+<script src="/static/src/help/views/exercise_help/exercise_help.js"></script>
+<script src="/static/src/help/views/modal_help/modal_help.js"></script>
+
 <script src="/static/src/auth/services/auth.js"></script>
 <script src="/static/src/language/services/language.js"></script>
 <script src="/static/src/profile/services/profile.js"></script>
@@ -162,6 +167,7 @@
 <script src="/static/src/lesson/services/exercise.js"></script>
 
 <script src="/static/src/auth/views/login/login.js"></script>
+
 
 
 <script src="/static/src/lesson/views/add/add.js"></script>
