starting separation of lesson module into lesson_learn, lesson_edit and lesson_practice

--- a/src/templates/app.html
+++ b/src/templates/app.html
@@ -35,7 +35,7 @@
       <ul class="nav navbar-nav">
 
         <li>
-          <a href="#/lesson/list">Lesson</a>
+          <a href="#/lessons">Lesson</a>
         </li>
         <li>
           <a href="#/practice">Practice</a>
@@ -157,8 +157,10 @@
 <script src="/static/src/profile/services/profile.js"></script>
 
 <script src="/static/src/lesson/services/edit.js"></script>
-<script src="/static/src/lesson/services/learn.js"></script>
 <script src="/static/src/lesson/services/exercise.js"></script>
+<script src="/static/src/lesson/services/lesson_learn.js"></script>
+<script src="/static/src/lesson/services/lesson_edit.js"></script>
+<script src="/static/src/lesson/services/lesson_practice.js"></script>
 
 <script src="/static/src/auth/views/login/login.js"></script>
 
