starting with material design

--- a/src/client/src/lesson/views/add/add.html
+++ b/src/client/src/lesson/views/add/add.html
@@ -51,7 +51,7 @@
         </tags-input>
       </td>
       <td>
-        <a ng-click="add.help('create_lesson')"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
+        <a ng-click="station.help('create_lesson')"><i class="glyphicon glyphicon-question-sign"> </i><span translate>Help</span></a>
       </td>
     </tr>
     </tbody>
